Fix visible tree z index

--- a/src/scss/sections/_resume.scss
+++ b/src/scss/sections/_resume.scss
@@ -74,6 +74,7 @@
         
         &.visible {
           opacity: 1 !important;
+          z-index: 99;
 
           &#work-content {
             left: $resume-tree-offset * 5 !important;
